stat_contour (e.g., stat_contour(aes(colour=..level..), binwidth=50)
directlabels ignores the binned contour lines and labels everything
(=whatever default contour lines are produced, even if not plotted!).

See etc/area.R for an example of using fill in area plots.

2.7 --- 12 July 2012

New lasso.labels Positioning Method that applies the QP solver to both
the top and bottom labels.

2.6 --- 5 June 2012

In ggplot2 >= 0.9.1, layer$data is an empty list of class "waiver" in
the ggplot object, but geom_xxx(data=waiver) results in an error, so
we check for this now and use data=NULL when we find a waiver.

2.5 --- 6 April 2012

draw.rects with configurable color, default black.

bugfix for ggplot2 geom_line picker. before we were not actually
checking the number of levels of the groups.

bugfixes for scatterplots using perpendicular.grid and [ac]hull.grid.

new check.for.columns function to make sure the data.frames returned
by Positioning Functions in apply.method have the necessary info.

bugfix for apply.method restore invariant columns for each group after
applying Positioning Method algorithm.

2.4 --- 5 March 2012

Suggest nlme to avoid warning on pkg check.

require(proto) in geom_dl to avoid error if it is called without
direct.label.ggplot

2.3 --- 2 March 2012

In apply.method, we look at all groups and determine which columns are
invariant in each, then after the Positioning Function is applied, we
write these values to the resulting data.frame if it does not contain
these variables. That way each individual Positioning Method doesn't
have to worry about keeping track of all the weird annotation columns
that can be there on input.

Works with ggplot2 0.9.0, including new simplified hiding of the
legend, using guides(colour="none")

dlgrobs have names == GRID.dlgrob.method if method is a character
string.

Tiebreaking for qp.labels when we are doing lineplots.

2.2 bugfixes

ggplot2 autopicker simpler.

use aes_string instead of aes in direct.label.ggplot
