@@ -2,5 +2,6 @@
 angled.endpoints <- list("last.points",rot=30)
 
 ### Label points at the top, making sure they don't collide.
-top.qp <- list("top.points","calc.boxes",qp.labels("x","w"))
+top.qp <- list("top.points","calc.boxes",
+               qp.labels("x","w",make.tiebreaker("y","x"))
 
